# cudaImage

./: Projet.sln  README.md
Projet/: Benchmarks.xlsx  CMakeLists.txt  Projet.vcxproj  Projet.vcxproj.filters  andyWarhol.cpp  andyWarhol.cu  another.cu  coloredSobel.cpp  coloredSobel.cu  convolution_matrix.cpp  convolution_matrix.cu  cpp.hint  filter.cu  grayscaleCase.cpp  grayscaleCase.cu  grayscaleStains.cpp  grayscaleStains.cu  grayscaleWithoutOne.cpp  grayscaleWithoutOne.cu  kernel.cu  launcher.cpp  mainHeader.h  utils.cu
Projet/include/: mainHeader.h  utils.cuh
