CMAKE_MINIMUM_REQUIRED(VERSION 3.13)
PROJECT("PROJET")

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_C_STANDARD 20)
ENABLE_LANGUAGE(CUDA)

FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

INCLUDE_DIRECTORIES(include)
FILE(GLOB COMMON
        "*.h", "*.cpp", "*.cuh", "*.cu")
ADD_EXECUTABLE(launcher ${COMMON})
TARGET_LINK_LIBRARIES(launcher ${OpenCV_LIBS})